# dbt

./: .env-sample  .gitignore  CHANGES.md  README.md  dbt_project.yml  packages.yml  prod_profiles.yml  profiles.yml  pyproject.toml
docs/: catalog.json  index.html  manifest.json  run_results.json
macros/: convert_grade_level_to_id.sql  convert_grade_level_to_short_label.sql  get_unweighted_gpa_point.sql  macros.yml  remove_edfi_deletes_and_duplicates.sql  retrieve_edfi_records_from_data_lake.sql
models/: overview.md
models/marts/assessments/: assessments.md  assessments.yml  dim_assessment.sql  dim_objective_assessment.sql  fct_student_assessment.sql  rpt_student_assessment.sql  wide_student_assessment.sql
models/marts/attendance/: attendance.md  attendance.yml  fct_student_attendance.sql  fct_student_school_attendance.sql  rpt_student_attendance.sql  rpt_student_school_attendance.sql  wide_student_school_attendance.sql
models/marts/core/: bridge_staff_group.sql  core.md  core.yml  dim_date.sql  dim_demographic.sql  dim_grading_period.sql  dim_lea.sql  dim_local_education_agency.sql  dim_school.sql  dim_section.sql  dim_session.sql  dim_staff.sql  dim_staff_section.sql  dim_student.sql  dim_student_program.sql  dim_student_section.sql  fct_staff_school.sql  fct_student_school.sql  fct_student_section.sql  student_local_education_agency_demographics_bridge.sql
models/marts/enrollment/: bridge_staff_group.sql  enrollment.yml  fct_student_school.sql
models/marts/grades/: fct_student_grade.sql  grades.md  (+5 more)
models/metrics/: current_gpa.sql  metrics.yml
(+67 files in other folders)
