[tool.poetry]
name = "dbt"
version = "0.1.0"
description = ""
authors = ["Marcos Alcozer <marcos@alcozer.dev>"]
license = "Apache License"

[tool.poetry.dependencies]
python = "3.9.10"
dbt-bigquery = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
