[tool.poetry]
name = "dbt"
version = "0.1.0"
description = ""
authors = ["Marcos Alcozer <marcos@alcozer.dev>"]
license = "Apache License"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
dbt-bigquery = "1.2.0"
dbt-osmosis = "^0.7.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
